fix: fix images failing to upload to s3
